--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,6 @@
-<form action="/users" method="POST">
-    <%# manually added authenticity token %>
-    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-    <label for="user">username</label>
-    <input type ="text" name="username" id= "username" ><br><br>
-    <label for="password">password</label>
-    <input type="password" name="password" id="password"><br><br>
-    <label for="email">email</label>
-    <input type="text" name="email">
-    <button type="submit">Submit</button>
-</form>
+<%= form_for @user do |f| %>
+  Username:<%= f.text_field :username, placeholder: "Enter Username here" %><br />
+  Email: <%= f.text_field :email , placeholder: "Enter Email here" %><br />
+  Password : <%= f.password_field :password, placeholder: "Enter Password here" %><br />
+  <%= f.submit %>
+<% end %>
