create edit routes and controllers

--- a/app/views/users/form_with_and_standard_html.html
+++ b/app/views/users/form_with_and_standard_html.html
@@ -10,6 +10,9 @@
     <button type="submit">Submit</button>
 </form>
 
+<!-- form_tag rails -->
+
+
 <!-- rails version with auto authenticity tokens and erb -->
 <%= form_with(url: "/users", method: "post") do %>
   <%= label_tag(:username, "Username:") %>
