--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,11 @@
 <%= form_for @user do |f| %>
-  Username:<%= f.text_field :username, placeholder: "Enter Username here" %><br />
-  Email: <%= f.text_field :email , placeholder: "Enter Email here" %><br />
-  Password : <%= f.password_field :password, placeholder: "Enter Password here" %><br />
+  <%= f.label :username %>
+  <%= f.text_field :username, placeholder: "Enter Username here" %><br />
+
+  <%= f.label :email %>
+  <%= f.text_field :email , placeholder: "Enter Email here" %><br />
+  
+  <%= f.label :password %>
+  <%= f.password_field :password, placeholder: "Enter Password here" %><br />
   <%= f.submit %>
 <% end %>
